packages/ses/test/error/issue-2941/test2/error-trapping-platform.demo.js
import '../../../../index.js';

lockdown({
  errorTaming: 'unsafe',
  stackFiltering: 'concise',
  errorTrapping: 'platform',
});

throw Error(`Does this place have an
  echo?
`);
